Add HUD property queries and improve card resource mapping
Introduces new GameFacade methods to list player properties and determine property ownership for HUD updates. UIController now displays owned properties in the HUD. CardResolver improves property card path mapping, checks for resource existence, and refines territory/company mappings for more robust image resolution.